load("//tools:no_undefined.bzl", "cc_library")

exports_files(
    srcs = ["toxencryptsave.h"],
    visibility = ["//c-toxcore:__pkg__"],
)

cc_library(
    name = "defines",
    hdrs = ["defines.h"],
    visibility = ["//c-toxcore/toxcore:__pkg__"],
)

cc_library(
    name = "toxencryptsave",
    srcs = ["toxencryptsave.c"],
    hdrs = ["toxencryptsave.h"],
    visibility = ["//c-toxcore:__subpackages__"],
    deps = [
        ":defines",
        "//c-toxcore/toxcore:ccompat",
        "//c-toxcore/toxcore:crypto_core",
        "@libsodium",
    ],
)

cc_library(
    name = "monolith",
    hdrs = glob([
        "*.c",
        "*.h",
    ]),
    visibility = ["//c-toxcore/other:__pkg__"],
    deps = [
        "//c-toxcore/toxcore:ccompat",
        "//c-toxcore/toxcore:crypto_core",
        "@libsodium",
    ],
)

CIMPLE_SRCS = glob(
    [
        "*.c",
        "*.h",
    ],
    exclude = ["*.api.h"],
)

sh_library(
    name = "cimple_files",
    srcs = CIMPLE_SRCS,
    visibility = ["//c-toxcore/testing:__pkg__"],
)
