load("@rules_cc//cc:defs.bzl", "cc_binary")

package(features = ["layering_check"])

cc_binary(
    name = "bootstrap_daemon",
    srcs = glob([
        "src/*.c",
        "src/*.h",
    ]),
    deps = [
        "//c-toxcore/other:bootstrap_node_packets",
        "//c-toxcore/toxcore",
        "//c-toxcore/toxcore:DHT",
        "//c-toxcore/toxcore:TCP_connection",
        "//c-toxcore/toxcore:ccompat",
        "//c-toxcore/toxcore:logger",
        "//c-toxcore/toxcore:mono_time",
        "//c-toxcore/toxcore:network",
        "//c-toxcore/toxcore:onion_announce",
        "@libconfig",
    ],
)
