load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "bootstrap_daemon",
    srcs = glob([
        "src/*.c",
        "src/*.h",
    ]),
    deps = [
        "//c-toxcore/other:bootstrap_node_packets",
        "//c-toxcore/toxcore:DHT",
        "//c-toxcore/toxcore:LAN_discovery",
        "//c-toxcore/toxcore:TCP_server",
        "//c-toxcore/toxcore:announce",
        "//c-toxcore/toxcore:ccompat",
        "//c-toxcore/toxcore:group_onion_announce",
        "//c-toxcore/toxcore:logger",
        "//c-toxcore/toxcore:mono_time",
        "//c-toxcore/toxcore:onion_announce",
        "//c-toxcore/toxcore:tox",
        "@libconfig",
    ],
)
